// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        id="test"
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="text"
      />
    </div>
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isRootFullWidth
        rootLayoutHorizontal
        isRootRequired
        isRootStateInvalid
        rootVariantFilled"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label
                isLabelHidden"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={true}
        id="test"
        onChange={null}
        placeholder="placeholder"
        required={true}
        size={3}
        type="email"
        value="value"
      />
      <div
        className="bottomLine"
      />
    </div>
  </label>
  <div
    className="feedback"
  >
    feedback
  </div>
  <div
    className="description"
  >
    some help
  </div>
</div>
`;

exports[`rendering renders correctly with hidden label 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label
                isLabelHidden"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        id="test"
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="text"
      />
    </div>
  </label>
</div>
`;
